--- a/background.tex
+++ b/background.tex
@@ -40,7 +40,7 @@ This formalism is similar to that retained by Buntine and Jakulin in their work 
 \end{equation}
 
 %See the Appendix~\ref{sec:mixmembership} for a justification of eq \eqref{eq:mf} using a Mixed Membership Model approach.
-A key point here, is that the Stochastic Block Model well studied in the literature \cite{goldenberg2010survey}, where nodes of the networks belong only to one clusters (Block model) is a special case of this formalism (as well as IMMSB and ILFM for the limit case) when the feature vector $f_i$ of node $i$ has one element corresponding to the membership while all the others are equal to zero. Besides the choice of the priors over $\mat{F}$ and $\mat{\Phi}$ represents the context in which  their elements can evolve.
+A key point here, is that the Stochastic Blockmodel well studied in the literature \cite{goldenberg2010survey}, where nodes of the networks belong only to one clusters (Blockmodel) is a special case of this formalism (as well as IMMSB and ILFM for the limit case) when the feature vector $f_i$ of node $i$ has one element corresponding to the membership while all the others are equal to zero. Besides the choice of the priors over $\mat{F}$ and $\mat{\Phi}$ represents the context in which  their elements can evolve.
 
 In the next session we review both IMMSB and ILFM more precisely.
 
