--- a/burstiness.tex
+++ b/burstiness.tex
@@ -17,22 +17,27 @@ Burstiness has been studied in different fields, in particular in computational 
 In the context of social networks, the notion of burstiness, or preferential attachment, appears at different levels: (a) a global preferential attachment level that characterizes the degree distribution of nodes in the network, (b) a local preferential attachment level that characterizes the degree distribution of nodes within communities, and (c) a feature burstiness level that characterizes the distributions of nodes among latent features. The feature burstiness characterize the importance of each features depending on how much they are represented within each nodes. We provide below a formal definition of these elements.
 %
 
+In the following we will use the notation $\Delta_n\ $ as referring to a discrete differentiation on $n$ such that for any series $b_n$ on has:
+\begin{equation}
+    \Delta_n\  b_n = b_{n+1} - b_n
+\end{equation}
+
 
 \begin{definition}[Burstiness in social networks]
-Let $i$ be a node in a social network $G=(V,E)$, and let $d_i$ denote its degree. Furthermore, let $\mathcal{M} \in \{\M_e, \M_g\}$ be a link prediction model as defined in Section~\ref{sec:models}, and let $\Delta_n$ be the discrete differentiation on $n$: 
+Let $i$ be a node in a social network $G=(V,E)$, and let $d_i$ denote its degree. Furthermore, let $\mathcal{M} \in \{\M_e, \M_g\}$ be a link prediction model as defined in Section~\ref{sec:models}: 
 \begin{description}
 \item[(i)] \emph{Global Preferential Attachment}: we say that $\mathcal{M}$ satisfies the global preferential attachment iff, for any node $i \in V$, we have:
  \begin{equation}
- \Delta_n \pr(d_i \geq n+1 | d_i \geq n,  \M) > 0
+ \Delta_n\  \pr(d_i \geq n+1 | d_i \geq n,  \M) > 0
  \end{equation}
-\item[(ii)] \emph{Local Preferential Attachment}: we say that $\mathcal{M}$ satisfies the local preferential attachment iff, for any node $i \in V$ and belonging to a community  $c$, we have:
+\item[(ii)] \emph{Local Preferential Attachment}: we say that $\mathcal{M}$ satisfies the local preferential attachment iff, for any node $i \in V$  belonging to a block $c$, we have:
   \begin{equation}
- \Delta_n \pr(d_{i,c} \geq n+1 | d_{i,c} \geq n,  \M) > 0
+ \Delta_n\  \pr(d_{i,c} \geq n+1 | d_{i,c} \geq n,  \M) > 0
  \end{equation}
-  Where $d_{i,c}$ denotes the degree of node $i$ in its community. \textcolor{red}{communities still ambiguous since we do not define it (moreover, we are in a context of soft clustering where node can belongs to several classes...)) }
+  Where $d_{i,c}$ denotes the degree of node $i$ inside the block $c$.
 \item[(iii)] \emph{Feature Burstiness}: we say that $\mathcal{M}_e$ satisfies the feature burstiness effect, iff, for any feature $k$ in the network,   
   \begin{equation}
-	\Delta_n \pr(f_{\bm{.}k} \geq n+1 | f_{\bm{.}k} \geq n,  \M) > 0
+	\Delta_n\  \pr(f_{\bm{.}k} \geq n+1 | f_{\bm{.}k} \geq n,  \M) > 0
   \end{equation}
    Where $f_{\bm{.}k}$ denotes the sum of the k-th features over all network's node such that $f_{\bm{.}k} = \sum_{j=0}^{N-1} f_{jk}$.
 \end{description}
@@ -51,7 +56,7 @@ This definition enables the link between the random variable $n$ being a integer
 \begin{theorem}[Burstiness to Global Preferential Attachment] \label{th:burst_exch}
 	 A degree distribution $p(d_i=n)$ of any node $i$ in a jointly exchangeable graph $G(V,E)$ is bursty iff :
 	\begin{equation}
-	 \Delta_n  p(y_{ij}=1 | d_i^{N,n}) \frac{N-n}{n+1} > 0
+	 \Delta_n\   p(y_{ij}=1 | d_i^{N,n}) \frac{N-n}{n+1} > 0
 	\end{equation}
 
 \end{theorem}
@@ -74,20 +79,21 @@ This definition enables the link between the random variable $n$ being a integer
 	
 	The differential is then equal to:
 	\begin{align*}
-	&\Delta_n b_n= b_{n+1} - b_n  \\
+	&\Delta_n\  b_n= b_{n+1} - b_n  \\
 	&= \frac{N-n-1}{n+2} \p(y_{ij}=1 | d_i^{N,n+1}) - \frac{N-n}{n+1} \p(y_{ij}=1 | d_i^{N,n})
 	\end{align*}
 	
 	The burstiness property is satisfied  $\forall n \in \mathbb{N}$ iff:
 	\begin{align*}
-	&\Delta_nb_n > 0 \iff \\
+	&\Delta_n\  b_n > 0 \iff \\
 	& \frac{(n+1)(N-n-1)}{(n+2)(N-n)}\p(y_{ij}=1 | d_i^{N,n+1})  > \p(y_{ij}=1 | d_i^{N,n})
 	\end{align*}
 	\label{b-theorem}
 \end{proof}
+
+In figure \ref{fig:bp} we represent the values of the coefficient of the left part in equation \ref{b-theorme} in function of $n$ for $N$ equal to 100.
 	
-	The study of the series forming the left hand part of the last equation gives hint about how and when the distribution $p$ would be bursty depending on the predictive distribution of a new observation in the data. Particularly this series is less than 1 with a maxima at $(N-2)/2$ and its symmetric around this extrema for $N \in [0, N-2]$. We represent the series in figure \ref{fig:bp}.
-	
+The study of this series gives hint about how and when the distribution of the degree would be bursty. We can show that this series is less than 1 with a maxima at $(N-2)/2$ and its symmetric around this extrema for $n \in [0, N-2]$. 	
 	
 	\begin{figure}[h]
 		\centering
@@ -96,78 +102,70 @@ This definition enables the link between the random variable $n$ being a integer
 		\label{fig:bp}
 	\end{figure}
 
+This figure illustrate this theorem which tell us that the burstiness effect for exchangeable sequence with finite capacity $N$ will collapse for a small number of observation or when the number of observations get closer to the capacity.\\
 
+\paragraph{Case of linear predictive distribution}~\\
 
-Interestingly this theorem tell us how the burstiness effect, for exchangeable sequence with finite capacity $N$, will collapse for a small number of observation and notably, when the number of observations get closer to the capacity.\\
+A typical form of the predictive distribution $\p(y_{ij}=1 | d_i^{N,n})$ is a linear function of the sufficient statistics of the observations (see \ref{prop:diaconis}). We now study the burstiness effect in this case with regards to theorem \ref{th:burst-exch}.
 
-A typical form of the predictive distribution $\p(y_{ij}=1 | d_i^{N,n})$ is a linear function of the sufficient statistics of the observations (see \ref{prop:diaconis}). Though the burstiness effect would have specific constraint in this case.
-
-We now study the case where the predictive distribution has a linear form such that:
+We suppose that the predictive distribution has a linear form such that:
 
 \begin{equation}
 p(y_{ij}=1 | d_i^{N,n}) = an+b
 \end{equation}  
-Where $n$ is a positive integers and $a$ and $b$ two positive real numbers. From theorem \ref{th:burst_exch} one has the following condition in order to satisfy the global preferential attachment:
+Where $n$ is a positive integer and $a$ and $b$ two positive real numbers. From theorem \ref{th:burst_exch} one has the following condition in order to satisfy the global preferential attachment:
 
 \begin{equation} \label{eq:polynom}
 \frac{-an^2 -3an +a(N-1)-b(N+1)}{(n+2)(N-n)} > 0 
 \end{equation}
-The denominator of this equation is strictly positive for $n \in [0, N-1]$. The condition depend then on the sign of the numerator being a polynom of degree 2. Thus it admits 2 roots $n_-$ and $n_+$ such that:
-\begin{align}
+The denominator of this equation is strictly positive for $n \in [0, N-1]$. The condition depends then on the sign of the numerator. This polynomial of degree 2 admits 2 roots denoted $n_-$ and $n_+$ given by:
+\begin{align*}
 n_+ &= \frac{-3a + \sqrt{a(4N(a-b)+5a-4b)}}{2a} \\
 n_- &= \frac{-3a - \sqrt{a(4N(a-b)+5a-4b)}}{2a} \\
-\end{align}
+\end{align*}
 
-If we study the polynom on the support of the real number, we can see that it is negative when $n$ tend to $+\infty$ and $-\infty$, thus the polynom take positive value between the roots if they exists. The condition of existence is:
+If we study the polynomial on the support of the real numbers, we can see that it is negative when $n$ tends to $+\infty$ and $-\infty$. Thus it takes positive values between the roots if they exists. The condition of existence is that the positivity of the roots:
 \begin{equation}
 a(4N(a-b)+5a-4b) > 0 \iff b < a \frac{4N+5}{4N+4}
 \end{equation}
 
-Furthermore, the roots need to be positive which traduce the following constraint:
+Furthermore, we the only one roots can be positive under the following constraint:
 \begin{align}
 \sqrt{a(4N(a-b)+5a-4b)} > 3a \iff a\frac{N-1}{N+1} > b
 \end{align}
-If such constraint is satisfied, the polynom admit positive value for $n \in [0, n_+]$. This development shows that for certain form of the predictive distribution the burstiness can not be satisfy for all integers $n$, but still a bursty phenomenon can exists on a subset which is determine by the hyperparameters of the model.
 
-In particular let's suppose the predictive distribution take this specific form:
-\begin{equation}
-p(y_{ij}=1 | d_i^{N,n}) = \frac{n+\lambda_1}{N+\lambda_1+\lambda_0}
-\end{equation}
-This is equivalent to solving the polynom \eqref{eq:polynom} for $a=1$ and $b=\lambda_1$. In such a case, the burstiness effect will be present in the subset $n \in [0, n_+]$ iff the following holds:
-\begin{equation}
-\lambda_1 < \frac{N-1}{N+1}
-\end{equation}
+If such constraint is satisfied, the polynomial admits positive values for $n \in [0, n_+]$. This development shows that for certain form of the predictive distribution, the burstiness property can not be satisfied for all integers $n$. However a bursty phenomenon can exists on an interval $[0, n_+]$ whose upper bound is determined by the hyperparameters of the model.
 
-We now propose a relation to go from the definition of the local preferential effect to the predictive likelihood inside a latent class. The reason of why the theorem \ref{th:burst_exch} can not be directly apply is because, when looking only at the relation that occurs inside a class, one need to marginalize the remainder relations that are not in this class.
+We now study the local preferential attachments by formulating a second theorem that enable link from the definition to the predictive distribution. We will show that both theorem are related in a simple and natural way.
 
 \begin{theorem}[Burstiness to Local Preferential Attachment] \label{th:burst_local}
-	Let $\M_g$ be a network model of a jointly exchangeable graph $G(V,E)$ such that $f_i$ and $\phi_{kk'}$ are iid for any $i$, $k$ and $k'$. Moreover,  Let $N^c$ and $N^r$ be two integer such that the the former is the number of node in a class $c$, and the second the number of node not being in $c$, such that $N^c+N^r = N$. A local degree distribution $p(d_{i,c}=n)$ of any node $i$ in $c$ is bursty iif,
+    Let $\M_g$ be a network model of a jointly exchangeable graph $G(V,E)$. Let $N^c$ and $N^r$ be two integers such that the former is the number of nodes in a block $c \in \{0,.., K-1\}$, and the second the number of nodes not being in $c$, such that $N^c+N^r = N$. A local degree distribution $p(d_{i,c}=n)$ for any node $i$ in $c$ is bursty iif:
 	
-	\begin{equation}
-\Delta_n  p(y_{ij}=1 | d_{i,c}^{N^c,n}) \frac{\sum_{r=0}^{N^r}\dbinom{N}{n+1+r} p(d_{ir}^{N^r,r})}{\sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ir}^{N^r,r}) } > 0
-	\end{equation}
-	
+\begin{equation}
+\Delta_n\   p(y_{ij}=1 | d_{i,c}^{N^c,n}) \frac{\sum_{r=0}^{N^r}\dbinom{N}{n+1+r} p(d_{ir}^{N^r,r})}{\sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ir}^{N^r,r}) } > 0
+\end{equation}
 	
 \end{theorem}
 
 \begin{proof}
-The exchangeable graph $G(V,E)$ contains $|V|=N$ nodes. Thus in the context of the local preferential attachment we consider the degree of a node $i$, in a class $c$ containing $N^c$ nodes and we denote the degree of this node within this class by $d_{i,c}$. We note the remaining number of node by $N^r = N - N_c$. We then write  distribution of the degree inside that class by marginalizing the possible edges between $i$ and the nodes that are not in $c$. We have:
+The exchangeable graph $G(V,E)$ contains $|V|=N$ nodes. Thus in the context of the local preferential attachment we consider the degree of a node $i$ belonging to the block $c$ containing $N^c$ nodes. The degree of this node within this block is denoted by $d_{i,c}$ and the  number of node out of the block $c$ is equal to $N^r = N - N_c$. We then write the distribution of the degree inside that block by marginalizing the possible edges between $i$ and the nodes that are not in $c$. We have:
+The degree distribution of the local degree can be obtained by marginalizing the possible edges between $i$ and  the nodes that are not in $c$, and is defined by:
 \begin{equation}
 p(d_{ic}=n) = \sum_{r=0}^{N^r} p(d_{ic}=n,d_{ir}=r)
 \end{equation}
-From exchangeable assumptions one as:
+From exchangeable assumptions it follows:
 
 \begin{equation}
 p(d_{ic}=n) = \sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ic}^{N^c, n},d_{ir}^{N^r, r})
 \end{equation}
-Under the assumptions that each local random parameters are i.i.d, we can separate the joint distribution: ( \textcolor{red}{on peut ouvrir la distribution avec les F et les Phi, pour voir que ca marche pour IMMSB mais pas pour ILFM, je me garde de l'écrire la pour gagner du temps !)}: 
+    Under the assumptions that each local random parameters are i.i.d, we can separate the joint distribution: ( \textcolor{red}{on peut ouvrir la distribution avec les F et les Phi, pour voir que ca marche pour IMMSB EDIT: je pense que c'est en fait vrai pour ILFM aussi, le point clé etant que les poid $\phi_{kk}$ sont indépendement distribue ce qui fait que l'on peut séparer les partie correspondantes à chaque classe.)}: 
 
 \begin{align}
-p(d_{ic}=n) &= \sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ic}^{N^c, n}) p(d_{ir}^{N_r, r}) \\
+p(d_{ic}=n) &= \sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ic}^{N^c, n}) p(d_{ir}^{N^r, r}) \\
  &=  p(d_{ic}^{N^c, n})\sum_{r=0}^{N^r}   \dbinom{N}{n+r} p(d_{ir}^{N^r, r})
 \end{align}
 
-Finally by applying the burstiness properties as in proof \ref{proof:glob}, and product rule we can expess the burstiness in function of the predictive distribution:
+Finally by applying the burstiness properties as in proof \ref{proof:glob}, and product rule we can formulate the burstiness in function of the predictive distribution:
 
 \begin{equation} \label{eq:29}
 b_n =  p(y_{ij}=1 | d_{i,c}^{N^c,n}) \frac{\sum_{r=0}^{N^r}\dbinom{N}{n+1+r} p(d_{ir}^{N^r,r})}{\sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ir}^{N^r,r}) }
@@ -183,7 +181,7 @@ We can see that in the case where $N^r=0$ equation \eqref{eq:29} reduce to:
 b_n = p(y_{ij}=1 | d_{i,c}^{N^c,n}) \frac{\dbinom{N}{n+1}}{ \dbinom{N}{n} } =  p(y_{ij}=1 | d_{i,c}^{N^c,n}) \frac{N-n}{n=1}
 \end{equation}
 
-And in this case $N^c=N$. This show that the results of theorem \ref{th:burst_exch} and \ref{th:burst_local} are equivalent in this case which is sounds since $N^r=0$ means that there is only one class, and so it is like evaluating the global preferential attachment.
+And in this case $N^c=N$. This show that the results of theorem \ref{th:burst_exch} and \ref{th:burst_local} are equivalent in this case which is sounds since $N^r=0$ means that there is only one block, and so it is like evaluating the global preferential attachment.
 %\begin{corollary}
 %	A degree distribution  $p(d_i=n)$ of any node $i$ in a jointly exchangeable graph $G(V,E)$ such that it admits a predictive distribution of the form $\p(y_{ij}=1 | d_i^{N,n}) = an+b$, is bursty iff:
 %Polynome solution, constraint on the positive roots, a, b > ...
@@ -193,17 +191,19 @@ We now apply the previous results to characterize the preferential attachments e
 
 
 \begin{proposition}
-	The IMMSB models satisfy the local preferential attachments in the generative model $\M_g$. \textcolor{red}{No consensus yet on making this proposition on theorem V.1 or V.2 ? But theorem V.1 doesnt account for simulation that are always bursty with regards to the degree distribution.}
+    The IMMSB model satisfies the local preferential attachment property in the generative version $\M_g$. \textcolor{red}{Pour conclure ce point,  on a doit s'entendre sur les theorem V.1 et V.2 ( But theorem V.1 doesn't account for simulation that are always bursty with regards to the degree distribution.)}
 \end{proposition}
 
 \begin{proof}
-In IMMSB one can write in the general case the predictive distribution conditioned by $d_i^{N,n}$:
+In the generative IMMSB model, one can write in the general case the predictive distribution conditioned by $d_i^{N,n}$ is given by:
 
 \begin{equation} 
 p(y_{ij} = 1 | d_i^{N,n}, \mathcal{M}_g) = \int_{\Theta} p(y_{ij}=1|\Theta) \frac{p(d_i^{N,n} | \Theta)}{p(d_i^{N,n})} p(\Theta) d\Theta \nonumber
 \end{equation}
 
-We only restrain the relations that occur inside a class $c=\{k,k\}$, thus we note $N^c$ the total number of nodes being in the class $c$. In IMMSB being in class $c$ means that for an interaction between (any) nodes $i$ and $j$, they took a membership associated to feature $k$.   (An other membership could be drawn for an other interaction, which make $N_c$ less or equal than $N$). One can write the predictive distribution inside this class as follows:
+Recall that in IMMSB the interaction $y_{ij}$ between two nodes $i$ and $j$ depends on their respective block assignments, and consequently two nodes belongs to the same block $c$ if they took the same assignments (which correspond to variable $z$ drawing from the latent features in the generative process.).
+
+In the context of the local preferential attachment property we consider only the relation inside this block $c$ and the predictive distribution inside this block is given by:
 
 \begin{align*} \label{eq:sum}
 &p(y_{ij} = 1 | d_{ic}^{N^c,n}, \mathcal{M}_g)  \\
@@ -213,16 +213,31 @@ We only restrain the relations that occur inside a class $c=\{k,k\}$, thus we no
 &= \frac{n+\lambda_1}{N^c + \lambda_1 +\lambda_0}
 \end{align*}
 
-Where $\text{B}()$ is the beta function. The last equation show that the predictive likelihood is strictly crescent with $n$.
+where $\text{B}()$ is the beta function. Given the last equation it's obvious that the  predictive likelihood is linear $n$.
+
+    \paragraph{\textcolor{red}{Theorem \ref{th:burst_exch} Framework }}~\\
+
+In particular,  let's now suppose that the predictive distribution takes this specific linear according to parameters :
+\begin{equation}
+p(y_{ij}=1 | d_i^{N,n}) = \frac{n+\lambda_1}{N+\lambda_1+\lambda_0}
+\end{equation}
+    This is equivalent to solving the polynomial \eqref{eq:polynom} for $a=1$ and $b=\lambda_1$. In such a case, the burstiness effect will be present in the subset $n \in \{0, n_+\}$ iff the following holds:
+\begin{equation}
+\lambda_1 < \frac{N-1}{N+1}
+\end{equation}
+
+    \paragraph{\textcolor{red}{Theorem \ref{th:burst_local} Framework }}~\\
+
+    \textcolor{red}{not ended yet...} $\frac{\sum_{r=0}^{N^r}\dbinom{N}{n+1+r} p(d_{ir}^{N^r,r})}{\sum_{r=0}^{N^r} \dbinom{N}{n+r} p(d_{ir}^{N^r,r})}$ ?
 
 \end{proof}
 
 \begin{proposition}
-	The ILFM model does not satisfy the local preferential attachments in the generative model $\M_g$.
+    The ILFM model does not satisfy the local preferential attachments in the generative model $\M_g$. \textcolor{red}{ meme question qu'audessus pour conclure cette proposition}
 \end{proposition}
 
 \begin{proof}
-As for IMMSB proof, we only consider the relations  that occur inside class $c=\{k,k\}$, thus we note $N^c$ the total number of nodes being in the class $c$. In ILFM being in the class $c$ means that we evaluate the predictive distribution by only considering the column $k$ of the feature matrix. We can interpret this operation as looking the connections pattern when only the contribution of the feature $k$ is at work. One can write the predictive distribution inside this class as follows:
+As for IMMSB proof, we only consider the relations  that occur inside block $c=\{k,k\}$, thus we note $N^c$ the total number of nodes being in the block $c$. In ILFM being in the block $c$ means that we evaluate the predictive distribution by only considering the column $c$ of the feature matrix. We can interpret this operation as looking the connections pattern when only the contribution of the feature $c$ is at work. One can write the predictive distribution inside this block as follows:
 
 \begin{align*}
 &\p(y_{ij}=1 | d_{ic}^{N^c,n}, \M_g)  \\
@@ -237,9 +252,8 @@ As for IMMSB proof, we only consider the relations  that occur inside class $c=\
 With $\sigma(\phi) = \frac{1}{1+\exp(-\phi)}$ and $\p(\phi) = \mathcal{N}(0, \sigma_w)$.
 
 
-\textcolor{red}{not ended yet...no theorem to go from the definition to the predictive likelihood}
+\textcolor{red}{not ended yet...same issue than the local case for IMMSB }
 \end{proof}
-
 
 We now turn to the mode $\M_e$. It is important to note here the fact that the probability $\pr(y_{ij}=1 \mid d_i \ge n, \M_e)$ increases with $n$ is equivalent to the fact that the probability $\pr(d_{i} \ge n+1 \mid d_i \ge n, \M_e)$ increases with $n$. Indeed:
 
@@ -254,10 +268,8 @@ We now turn to the mode $\M_e$. It is important to note here the fact that the p
 Hence $\pr(d_{i} \ge n+1 \mid d_i \ge n, \M_e)$ and $P(y_{ij} = 1 \mid d_i \ge n, \M_e)$ vary in the same direction. The same development holds for $\pr(y_{ij}=1 \mid d_{i,c} \ge n, \M_e)$. The above definitions, characterizing probabilistic link models in the mode $\M_e$ according to burstiness in social networks, are thus directly related to the general definition of burstiness given in Definition~\ref{def:burst}.
 
 
-
-
 \begin{proposition}
-	The ILFM and IMMSB models do not satisfy the global and local preferential attachments. in the mode $\M_e$.
+	The ILFM and IMMSB models do not satisfy the global and local preferential attachments in the mode $\M_e$.
 \end{proposition}
 
 The proof of this statement is trivially true in the sens that given $\mat{F}$ and $\mat{\Theta}$, the likelihood is fully determined and hence do not depend on new links being generated. More precisely one has:
@@ -265,16 +277,17 @@ The proof of this statement is trivially true in the sens that given $\mat{F}$ a
 \p(y_{ij}=1| d_i \ge n, \M_e) &= \p(y_{ij}=1| \M_e)\\
 &= \mat{\hat{f}}_{i} \mat{\hat{\Phi}} \mat{\hat{f}}_j^\top
 \end{align}
-The predictive likelihood does not depend on $n$ and hence the burstiness is not satisfied. The same development holds for the local preferential attachment by indexing variable by a class $c$.
+The predictive likelihood does not depend on $n$ and hence the burstiness is not satisfied. The same development holds for the local preferential attachment by indexing variables by the related block $c$.
 
-Furthermore, we report simulations in figure \ref{fig:gen_burst_mmsb} show complex pattern in the empirical distribution of the overall degree that are clearly non bursty. One can note that, despite this result, the inference procedure of the posterior distribution will be likely to produce latent features that fit an possible presence of burstiness of the data as report in section \ref{sec:experiments}. This is particularly visible on the predictive likelihood for IMMSB which take the following form (see details in appendix \ref{sec:append}):
+Furthermore, we report simulations in figure \ref{fig:gen_burst_mmsb} that exibit complex pattern in the empirical distribution of the overall degree that are clearly non bursty. One can note that, despite this result, the inference procedure of the posterior distribution will be likely to produce latent features that fit  the burstiness present data as reported in section \ref{sec:experiments}. This is particularly visible on the predictive likelihood for IMMSB which take the following form (see details in appendix \ref{sec:append}):
 \begin{equation} \label{eq:ppp}
 p(y_{ij}=1 | \M_e)\propto \sum_{kk'} \frac{M_{(kk')1} + \lambda_1}{M_{(kk')\bm{.}} + \lambda_0 + \lambda_1}  (N_{ik} + \alpha\beta_k ) (N_{jk} + \alpha\beta_k)
 \end{equation}   
-One can see the features that are associated with the weights that cumulate number of observed links will be more likely to generate new links. In the case of ILFM the mixing between feature and weight is less clear since the non-conjugacy produce no close relation between the posterior and the sufficient statistics of the data (ie the degrees count). 
+One can see that the features that are associated with the weights that cumulate number of observed links will be more likely to generate new links. In the case of ILFM the mixing between feature and weight is less clear since the non-conjugacy produce no close relation between the posterior and the sufficient statistics of the data (ie the degrees count). Nevertheless, the predictive analysis in section \ref{sec:experiments} shows that IMMSB outperform ILFM on bursty networks.
 
 \begin{proposition} \label{prop:diaconis}
-	Both ILFM and IMMSB models satisfy the feature burstiness for $n < L$ under some conditions on their hyperparameters  and $L$ a number of observation depending of the hyperparameters.
+    ILFM model satisfy the burstiness effect for $n<n_+$ such that $n_+ \sim \sqrt(N)$  if $N>>0$ \\
+    IMMSB model satisfy the burstiness effect for feature $k$, iif $n<n_+$ and $\alpha_k<\frac{N-1}{N+1}$ such that $n_+ \sim \sqrt(N(1-\lambda_1))$ if $N(1-\lambda_1)>>0$ 
 \end{proposition}
 
 \begin{proof}
@@ -289,23 +302,40 @@ Especially, the Dirichlet Process and the Indian Buffet Process, as prior for th
 &\p(f_{ik} = 1 | F^{-ik}) = \frac{n_{ik}^{-z_{ij}}+\alpha_k}{N+\alpha_.} \qquad \text{IMMSB feature update} \nonumber \\
 \end{align}
 
-Where the $m_k^{-ik}$ described the number of elements that have the $k$-iem feature active except for element $i$, similarly $n_{ik}^{-z_{ij}}$ represents the number of times that $i$ was assigned to $k$ except for relation $(ij)$ (class membership are jointly sampled in MMSB).
+Where the $m_k^{-ik}$ described the number of elements that have the $k$-iem feature active except for element $i$, similarly $n_{ik}^{-z_{ij}}$ represents the number of times that $i$ was assigned to $k$ except for relation $(ij)$ (block membership are jointly sampled in MMSB).
 
-By applying theorem \ref{th:burst_exch} for linear predictive distribution, it can be easily show that the burstiness is true below a number $L$ which is the positive roots of the polynom:
+By applying theorem \ref{th:burst_exch} for linear predictive distribution, we showed show that the burstiness is true until $n+$ if the following polynomial admit a positive root:
 \begin{equation}
 	 an^2 + 3an - a(N-1) + b(N+1) = 0
 \end{equation}
 
-The condition on the hyperparameters $a$ and $b$ arise in order to find a strictly positive roots of this polynom. In the case of ILFM and IMMSB, it is equivalent to solve the polynom with a=1 and  $b=0$ or $b=\alpha_k$ for respectively ILFM and IMMSB. The positive roots arise in this case if $b < 1$, which determines $L$.
+    In the case of ILFM and IMMSB, it is equivalent to solve the polynomial with $a=1, b=0$ for ILFM and $a=1, b=\alpha_k$ for IMMSB. The positive root arise in this case if $b < \frac{N-1}{N+1}$, which determines $n_+$. Thus for the ILFM, the root is only positive while for IMMSB, the positive root arise if $\alpha_k < \frac{N-1}{N+1}$. Moreover, when the number of nodes increase such that $N >> 0$, the born become $n_+ \sim \sqrt(N)$ when $N >> 0$. The asymptotic born is the same for IMMSB if $\alpha_k << 1$.
 \end{proof}
 
-We represent tree networks generated by ILFM in figure \ref{fig:gen_burst_ilfm} and IMMSB \ref{fig:gen_burst_mmsb}. We compute a goodness of fit to quantify the power law hypothesis on the empirical degree distributions. The protocol is described in section \ref{sec:experiments-busrt}. As an empirical illustration for our claims on preferential attachment, we show a 3*3 figure where each columns is particular setting of hyper-parameter and the rows are respectively, the global degree distribution, the local degree distribution and feature distribution (on a max a assignment point of view).
+This proposition suggest that HDP and IBP are admissible priors in order to satisfy a burstiness effect on the latent features until a reasonable born. This born is asymptotically  (with a mild condition on IMMSB), the square root of the number of nodes. Note that the constraint that we find for the condition over the hyperparameters of the truncated Dirichlet (for IMMSB), directly traduce the well know fact that the more the parameters of a Dirichlet distribution are small the more the sample will be sparse. Or equivalently, the distribution will be concentrated on the corner of its simplex.
 
-As we can see in the experiments, we can generate networks that do not fit the burstiness definition on the overall degree distribution.
+\subsection{Empirical Illustration}
 
-\begin{figure}[h]
+We illustrate the burstiness results, by generating 3 random networks for each of the both models. We use the 3 same settings for IMMSB (figure \ref{fig:gen_burst_mmsb}) than those in the previous section. For ILFM (figure \ref{}) we use the following 3 settings: (column 1:$\alpha=0.01,  \lambda_1=\lambda_2=1$ , column 2:$\alpha=1, \lambda_1=\lambda_2=1$, column 3: $\alpha=1, \lambda_1=\lambda_2=1$) and we fix $\sigma_w=1$ and again $N=1000$.
+
+Then each row of the two figure represent the three following measure that correspond respectively to global preferential attachment, the local preferential attachment and the feature burstiness:
+\begin{itemize}
+    \item First row measure the overall degree distributions; We report average and standard deviation of the degree distribution in a linear scale for each generated network.
+    \item Second row measure the local degree distribution on a loglog scale:
+        \begin{itemize}
+            \item for IMMSB each networks has an associated membership tensor $Z$, that indicates the membership that each nodes take for each interactions. In order to draw the local degree distribution for a block $c$, we reduce the adjacency matrix to retain only links that occurs for any two nodes taking membership $c$. The local degree distribution is thus computed on the reduce adjacency matrix $Y_c = Y \otimes (Z_i^k \times Z_j^k)$ where $\otimes$ is the hadamard product and $\times$ the outer product and $Z_i^k$ is the membership matrix of a nodes $i$ such that $Z_{il}=0$ if $l\neq q$.
+            \item for ILFM each nodes is associated to a fix feature vector; the local degree distribution for the block $k$ is obtain by taking only the contribution 
+                of the features $k$ on the adjacency matrix. The local degree degree distribution is computed on the reduce adjacency matrix $Y_c = Y \otimes (F_{.k}\times F_{.k}^T)$. 
+        \end{itemize}
+    \item Third row measure the distribution of the block membership. Hence for IMMSB, for a feature $k$, we measure $\sum_{ij} \mathbb{1}(Z_{i\rightarrow j} = k$ which indicates the number of nodes who were associated to the bock $k$. For ILFM the number of times nodes associated to a block $k$ is simply $\sum_n F^{nk}$.
+\end{itemize}
+
+
+We provide in annexe (\textcolor{red}{not yet included}), to be complete, an goodness of fit again a power law distribution for all local degrees distribution in order to quantify the power law hypothesis on the empirical degree distributions. The protocol is described in section \ref{sec:experiments-busrt}. 
+
+
+\begin{figure*}[h]
 	\centering
-	
 	\minipage{0.16\textwidth}
 	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_peaks/figure_1}
 	\endminipage
@@ -335,9 +365,39 @@ As we can see in the experiments, we can generate networks that do not fit the b
 	\minipage{0.16\textwidth}
 	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_regular/figure_5}
 	\endminipage
-	\caption{Generated Networks with in three different settings (same set than for figure \ref{fig:gen_blocks}). The upper figures show the global preferential attachment. The lower figures show the local preferential attachment. While global preferential attachment is not a pure features of model, we see that the local preferential attachment has linear form in the log-log space.}
-	\label{fig:gen_burst_mmsb}
-\end{figure}
 
+
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_peaks/figure_1}
+	\endminipage
+		\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_power_law/figure_1}
+	\endminipage
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_regular/figure_1}
+	\endminipage
+		\vspace{-0.4cm}
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_peaks/figure_3}
+	\endminipage
+		\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_power_law/figure_3} 
+	\endminipage
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_regular/figure_3}
+	\endminipage
+		\vspace{-0.4cm}
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_peaks/figure_5}
+	\endminipage
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_power_law/figure_5} 
+	\endminipage
+	\minipage{0.16\textwidth}
+	\includegraphics[width=3.2cm, height=3.7cm]{img/M_g_regular/figure_5}
+	\endminipage
+	\caption{Generated Networks with ILFM for three different settings (same set than for figure \ref{fig:gen_blocks_mmsb}). The top rows measure the global preferential attachment through the overall degree distribution. The middle row measure the local preferential attachment through the local degree distribution. The last row measure the feature burstiness through the block membership distribution.}
+	\label{fig:gen_burst_mmsb}
+\end{figure*}
 
 
