--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 %\input{../tikz.conf}
 
 \usetikzlibrary{bayesnet}
+\usepackage{caption}
 
 %%%%%%%%%%% Box 
 \usepackage{calc}%    For the \widthof macro
